force-app/main/default/objects/FSM_BatchClassQueries__mdt/FSM_BatchClassQueries__mdt.object-meta.xml
<CustomObject>
    <description>SFI-193</description>
    <label>Batch Class Queries</label>
    <pluralLabel>Batch Class Queries</pluralLabel>
</CustomObject>