force-app/main/default/objects/FSM_BatchClassQueries__mdt/fields/FSM_Active__c.field-meta.xml
<CustomField>
    <fullName>FSM_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>