force-app/main/default/objects/FSM_BatchClassQueries__mdt/fields/FSM_Query__c.field-meta.xml
<CustomField>
    <fullName>FSM_Query__c</fullName>
    <label>Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>