force-app/main/default/objects/FSM_BatchClassQueries__mdt/fields/FSM_SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_SequenceNumber__c</fullName>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>