force-app/main/default/objects/FSM_BatchClassQueries__mdt/fields/FSM_Type__c.field-meta.xml
<CustomField>
    <fullName>FSM_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delete</fullName>
                <default>true</default>
                <label>Delete</label>
            </value>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>